fix about form email-field width on safari mobile

--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -42,5 +42,9 @@
     transform: translateY(100%);
     transition: transform 0.4s $ease-out-expo;
     transform-origin: bottom;
+
+    @include screen('small') {
+      visibility: hidden;
+    }
   }
 }
